--- a/.github/workflows/ci.js.yml
+++ b/.github/workflows/ci.js.yml
@@ -1,9 +1,9 @@
 name: CI
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
     
 jobs:
   build:
@@ -27,14 +27,11 @@ jobs:
       packages: write 
     steps:
       - uses: actions/checkout@v3
-      # Setup .npmrc file to publish to GitHub Packages more junk
       - uses: actions/setup-node@v3
         with:
-          node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@tverstraten'
+          node-version: 16
+          registry-url: https://registry.npmjs.org/
       - run: npm install
       - run: npm publish 
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
