--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@tverstraten/log-annotations",
-	"version": "1.0.19",
+	"version": "1.0.20",
 	"description": "Annotations for logging",
 	"author": "tverstraten",
 	"main": "dist/src/index.js",
@@ -27,7 +27,7 @@
 		"clean": "rimraf dist/",
 		"lint": "eslint \"{src,test}/**/*.ts\" --fix",
 		"format": "prettier --write \"src/**/*.ts\" ",
-		"test": "echo \"Error: no test specified\" && exit 1",
+		"test": "jest --coverage",
 		"update-deps": "npm update"
 	},
 	"dependencies": {
@@ -35,10 +35,37 @@
 	},
 	"devDependencies": {
 		"@tverstraten/eslint-config-base": "^1.0.25",
+		"@types/jest": "^29.4.0",
 		"eslint-plugin-spellcheck": "^0.0.20",
+		"jest": "^29.4.1",
 		"prettier": "^2.8.3",
 		"prettier-plugin-organize-imports": "^3.2.2",
 		"rimraf": "^4.0.5",
+		"ts-jest": "^29.0.5",
 		"ts-node": "^10.9.1"
+	},
+	"jest": {
+		"moduleFileExtensions": [
+			"js",
+			"json",
+			"ts"
+		],
+		"coverageReporters": [
+			"json",
+			"json-summary",
+			[
+				"text",
+				{
+					"skipFull": true
+				}
+			]
+		],
+		"rootDir": "src",
+		"testRegex": ".spec.ts$",
+		"transform": {
+			"^.+\\.(t|j)s$": "ts-jest"
+		},
+		"coverageDirectory": "../coverage",
+		"testEnvironment": "node"
 	}
 }
